--- a/src/GooseFEM.pc.in
+++ b/src/GooseFEM.pc.in
@@ -4,6 +4,6 @@ exec_prefix=${prefix}
 Name: GooseFEM
 Description: Several Finite Element simulation, and some simple meshes and operations (C++/Python)
 Requires:
-Version: @GOOSEMESH_VERSION_NUMBER@
+Version: @GOOSEFEM_VERSION_NUMBER@
 Libs:
 Cflags: -I${prefix}/@INCLUDE_INSTALL_DIR@
