Added example dynamics : two phase laminate

--- a/docs/examples/DynamicsDiagonalPeriodic/laminate/no_damping/Verlet/CMakeLists.txt
+++ b/docs/examples/DynamicsDiagonalPeriodic/laminate/no_damping/Verlet/CMakeLists.txt
@@ -15,33 +15,29 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 # load pkg-config
 find_package(PkgConfig)
 
-# find cppmat
-pkg_check_modules(CPPMAT REQUIRED cppmat)
-include_directories(${CPPMAT_INCLUDE_DIRS})
-
-# find GooseFEM
-pkg_check_modules(GOOSEFEM REQUIRED GooseFEM)
-include_directories(${GOOSEFEM_INCLUDE_DIRS})
-
-# find GooseMaterial
-pkg_check_modules(GOOSEMATERIAL REQUIRED GooseMaterial)
-include_directories(${GOOSEMATERIAL_INCLUDE_DIRS})
-
-# find eigen3
-pkg_check_modules(EIGEN3 REQUIRED eigen3)
-include_directories(${EIGEN3_INCLUDE_DIRS})
-
-# find HDF5
+# load HDF5
 find_package(HDF5 COMPONENTS CXX REQUIRED)
 include_directories(${HDF5_INCLUDE_DIRS})
 set(LINK_LIBS ${HDF5_LIBS} ${HDF5_LIBRARIES})
 
-# find HDF5pp
+# load header-only modules using pkg-config
+# - cppmat
+pkg_check_modules(CPPMAT REQUIRED cppmat)
+include_directories(${CPPMAT_INCLUDE_DIRS})
+# - GooseFEM
+pkg_check_modules(GOOSEFEM REQUIRED GooseFEM)
+include_directories(${GOOSEFEM_INCLUDE_DIRS})
+# - GooseMaterial
+pkg_check_modules(GOOSEMATERIAL REQUIRED GooseMaterial)
+include_directories(${GOOSEMATERIAL_INCLUDE_DIRS})
+# - eigen3
+pkg_check_modules(EIGEN3 REQUIRED eigen3)
+include_directories(${EIGEN3_INCLUDE_DIRS})
+# - HDF5pp
 pkg_check_modules(HDF5PP REQUIRED HDF5pp)
 include_directories(${HDF5PP_INCLUDE_DIRS})
 
-# add executable
+# create executable
 add_executable(${PROJECT_NAME} main.cpp)
-
 # link libraries
 target_link_libraries(${PROJECT_NAME} ${LINK_LIBS})
