--- a/docs/examples/DynamicsDiagonalPeriodic/laminate/no_damping/velocityVerlet/CMakeLists.txt
+++ b/docs/examples/DynamicsDiagonalPeriodic/laminate/no_damping/velocityVerlet/CMakeLists.txt
@@ -12,6 +12,16 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+# option to enable OpenMP
+option(OPENMP "Use OpenMP" ON)
+if(OPENMP)
+  find_package(OpenMP)
+  if(OPENMP_FOUND)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+  endif()
+endif()
+
 # load pkg-config
 find_package(PkgConfig)
 
