Removed output from example

--- a/docs/examples/Dynamics/laminateElastic/noDamping/CMakeLists.txt
+++ b/docs/examples/Dynamics/laminateElastic/noDamping/CMakeLists.txt
@@ -21,7 +21,9 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # set warnings on
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -g")
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
 
 # load packages
 # -------------
@@ -32,10 +34,10 @@ if(NOT "$ENV{INCLUDE_PATH}" STREQUAL "")
   include_directories(${INCLUDE_LIST})
 endif()
 
-# load HDF5
-find_package(HDF5 COMPONENTS CXX REQUIRED)
-include_directories(${HDF5_INCLUDE_DIRS})
-set(PROJECT_LIBS ${PROJECT_LIBS} ${HDF5_LIBS} ${HDF5_LIBRARIES})
+# # load HDF5
+# find_package(HDF5 COMPONENTS CXX REQUIRED)
+# include_directories(${HDF5_INCLUDE_DIRS})
+# set(PROJECT_LIBS ${PROJECT_LIBS} ${HDF5_LIBS} ${HDF5_LIBRARIES})
 
 # load eigen
 find_package(PkgConfig)
@@ -47,5 +49,5 @@ include_directories(SYSTEM ${EIGEN3_INCLUDE_DIRS})
 
 add_executable(${PROJECT_NAME} main.cpp)
 
-target_link_libraries(${PROJECT_NAME} ${PROJECT_LIBS})
+# target_link_libraries(${PROJECT_NAME} ${PROJECT_LIBS})
 
