Various minor updates

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,7 +132,7 @@ message(STATUS "| Use 'make install' to install in")
 message(STATUS "|   ${CMAKE_INSTALL_PREFIX}")
 if(BUILD_TESTS)
   message(STATUS "|")
-  message(STATUS "| Use 'make' and './test' to run the tests")
+  message(STATUS "| Use 'make' and './test/test' to run the tests")
 endif()
 message(STATUS "|")
 message(STATUS "| To specify a custom directory call")
