--- a/docs/examples/Dynamics/laminateElastic/noDamping/CMakeLists.txt
+++ b/docs/examples/Dynamics/laminateElastic/noDamping/CMakeLists.txt
@@ -29,6 +29,13 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -g")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DXTENSOR_USE_XSIMD=ON")
 
+# assertions
+if(NOT ASSERT)
+  add_definitions(-DNDEBUG)
+else()
+  add_definitions(-DXTENSOR_ENABLE_ASSERT=ON)
+endif()
+
 # load packages
 # -------------
 
