--- a/docs/examples/Statics/LinearElasticity/CMakeLists.txt
+++ b/docs/examples/Statics/LinearElasticity/CMakeLists.txt
@@ -29,6 +29,13 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -g")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DXTENSOR_USE_XSIMD=ON")
 
+# assertions
+if(NOT ASSERT)
+  add_definitions(-DNDEBUG)
+else()
+  add_definitions(-DXTENSOR_ENABLE_ASSERT=ON)
+endif()
+
 # load packages
 # -------------
 
@@ -52,6 +59,7 @@ include_directories(SYSTEM ${EIGEN3_INCLUDE_DIRS})
 # -----------------
 
 add_executable(${PROJECT_NAME} main.cpp)
+# add_executable(${PROJECT_NAME} main_manualPartition.cpp)
 
 target_link_libraries(${PROJECT_NAME} ${PROJECT_LIBS})
 
