Adding examples to CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -69,6 +69,7 @@ install:
     - conda install xtensor -c conda-forge
     # store relevant
     - build_dir="${PWD}/build"
+    - example_dir="${PWD}/docs/examples"
     # build path
     - mkdir "${build_dir}"
     - cd "${build_dir}"
@@ -85,6 +86,13 @@ install:
     - cd "${build_dir}"
     - cmake .. -DBUILD_TESTS=ON
     - make
+    # make examples
+    - cd "${example_dir}"
+    - source buid_all.sh
 script:
+    # run tests
     - cd "${build_dir}/test"
     - ./test
+    # run examples
+    - cd "${example_dir}"
+    - source run_all.sh
